# indiv-api-model-inserts

./: README.md  app.py  pyproject.toml  setup.sh  streamlit_app.py
indiv_api_model_inserts/: input_utils.py  model_insert.py  model_insert_queries.py
